# mdsticker

./: README.md  index.html  package-lock.json  package.json  trashbox.html  vite.config.ts
.github/workflows/: publish.yml
src/: App.css  App.tsx  StickerMarkdown.css  StickerMarkdown.tsx  TrashBoxApp.css  TrashBoxApp.tsx  base.css  main.tsx  object.hasown.d.ts  trashbox.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/db/: 001_init.sql
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  repository.rs
