[package]
name = "mdsticker"
version = "1.0.1"
description = "A simple sticky note app where you can write in markdown."
authors = ["fuchigta"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.10.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
tokio = { version = "1.40", features = ["full"] }
rand = "0.8.5"
tauri-plugin-shell = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "mdsticker_lib"
crate-type = ["staticlib", "cdylib", "lib"]
